k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-dev

  labels:
    env: dev
